WAC-35 Fix : top search on mobile size

--- a/ckanext/who_afro/assets/css/who-afro.css
+++ b/ckanext/who_afro/assets/css/who-afro.css
@@ -398,14 +398,12 @@ p.small {
     .promoted-right .lens-btn {
         padding-left: 12px !important;
         padding-right: 12px !important;
-        background: none;
         outline: none;
-        border: 1px solid var(--who-blue-ten-percent);
         border-left: none;
+
 
     }
     #field-giant-search {
-        border: 1px solid var(--who-blue-ten-percent);
         border-right: none;
     }
 
